@@ -1,3 +1,8 @@
+2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b71
+
+        * Fix: Prevent the random block from grabbing an album highlight as its
+          image.
+
 2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b70
 
         * Fix: Mambo popups failed to operate because the option var wasn't
